--- a/font-awesome-icons.html
+++ b/font-awesome-icons.html
@@ -7,4 +7,5 @@
 <i class="fas fa-close"></i>
 <i class="fas fa-search"></i>
 <i class="fas fa-pen"></i>
-
+<i class="fa-solid fa-heart"></i>
+<i class="fa-solid fa-comment"></i>
